--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
+@import "../node_modules/leaflet/dist/leaflet.css";
+
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    height: 100%;
+    max-height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif; 
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+}
